refining get stats endpoint to filter for monster, faction, book list
