# src/server/routes/stats/statsService.ts
@@ -1,6 +1,7 @@
-import { getStatDefinitions } from './statsRepository'
-import { reconcileIncludeExclude } from '../helpers'
+import { getStatDefinitions, ValidFormat } from './statsRepository';
+import { reconcileIncludeExclude } from '../helpers';
 import { ApiResponse } from '../../apiResponse.types';
+import { referenceCache } from '../../sql';
 
 export const getStatsInCategory = async (
   category: string,
@@ -8,10 +9,18 @@ export const getStatsInCategory = async (
     year: number,
     bookIds?: number[],
     exclude?: string[],
-    include?: string[]
+    include?: string[],
+    monster?: string,
+    faction?: string,
+    format?: string
   }
 ): Promise<ApiResponse<unknown>> => {
-  const {year, bookIds, exclude, include} = options;
+  const {year, bookIds, exclude, include, monster, faction, format} = options;
+  const monsterName = monster && monster.toLowerCase() || "";
+ 
+  let fields = format && ["all", "names"].includes(format.toLowerCase()) 
+    ? format.toLowerCase() as ValidFormat
+    : "all";
 
   let categories = [category]
   if (category === 'attributes') {
@@ -22,6 +31,47 @@ export const getStatsInCategory = async (
   }
   let defaultExclusions = exclude ? [...exclude] : [];
   let defaultInclusions = include ? [...include] : [];
+  const bookSet = new Set(bookIds);
+
+  if (categories.includes('backgrounds')) {
+
+    const noAncestors = /^(silent\s+striders?|glass\s+walkers?|bone\s+gnawers?)$/i;
+    const noPurebreed = /^(glass\s+walkers?|bone\s+gnawers?)$/i;
+    const noResources = /^red\s+talons?$/i;
+
+    switch (true) {
+      case noPurebreed.test(monsterName):
+        defaultExclusions.push('pure breed');
+      case noAncestors.test(monsterName):
+        defaultExclusions.push('ancestors')
+        break;
+      case noResources.test(monsterName):
+        defaultExclusions.push('resources');
+        break;
+      default:
+        break;
+    }
+
+    // Tal'Mahe'Ra members can have dots in Cult, and it's the
+    // only stat that belongs to multiple factions.
+    if (faction && ["true black hand", "tal'mahe'ra"].includes(faction.toLowerCase())) {
+      defaultInclusions.push('cult')
+    }
+   
+    if (bookIds) {
+      const mageCore = await referenceCache.getBookId('mage: the ascension 20th anniversary core');
+      const hunterCore = await referenceCache.getBookId('hunter: the reckoning');
+      switch (true) {
+        case bookSet.has(mageCore):
+          defaultInclusions =  [...defaultInclusions, ...['totem', 'status']];
+        case bookSet.has(hunterCore):
+          defaultInclusions = [...defaultInclusions, ...['patron', 'destiny']];
+          break;
+        default:
+          break;
+      }  
+    }
+  }
 
   if (categories.includes('talents')) {
     if (year < 1700 ) {
@@ -30,36 +80,45 @@ export const getStatsInCategory = async (
   }
 
   if (categories.includes('skills')) {
-    if (year < 1950) {
-      defaultExclusions.push('technology');
-      if (year < 1930) {
-        defaultInclusions.push('ride');
-        if (year < 1910) {
-          defaultExclusions.push('drive');
-          if (year < 1890) {
-            defaultInclusions.push('archery');
-            if (year < 1750 ) {
-              defaultInclusions.push('commerce');
-              if (year < 1500) {
-                defaultExclusions.push('firearms');
-              }
-            }
-          }
-        }
+
+    if (bookIds) {
+      // Meditation is accredited to Mage 20th, so at risk of being deleted if you want Wraith.
+      const wraithCore = await referenceCache.getBookId('wraith: the oblivion 20th anniversary core');
+      if (bookSet.has(wraithCore)) {
+        defaultInclusions.push('meditation');
       }
+    }
+    switch (true) {
+      case year < 1950:
+        defaultExclusions.push('technology');
+      case year < 1930:
+        defaultInclusions.push('ride');
+      case year < 1910:
+        defaultExclusions.push('drive');
+      case year < 1890:
+        defaultInclusions.push('archery');
+      case year < 1750:
+        defaultInclusions.push('commerce');
+      case year < 1500:
+        defaultExclusions.push('firearms');
+        break;
+      default:
+        break;
     }
   }
 
   if (categories.includes('knowledges')) {
-    if (year < 1980) {
+    switch (true) {
+    case year < 1980:
       defaultExclusions.push('computer');
-      if (year < 1914) {
-        defaultInclusions.push('seneschal');
-        if (year < 1700) {
-          defaultInclusions = [...defaultInclusions, ...['enigmas', 'theology', 'hearth wisdom']];
-        }
-      }
-    }  
+    case year < 1914:
+      defaultInclusions.push('seneschal');
+    case year < 1700:
+      defaultInclusions = [...defaultInclusions, ...['enigmas', 'theology', 'hearth wisdom']];
+      break;
+    default:
+      break;
+    }
   }
 
   const exclusions = include
@@ -72,8 +131,13 @@ export const getStatsInCategory = async (
 
   return await getStatDefinitions(
     categories,
-    bookIds,
-    exclusions,
-    inclusions
+    {
+      bookIds,
+      exclude: exclusions,
+      include: inclusions,
+      monster,
+      faction,
+      fields
+    }
   );
 }
